# haskell-winograd

report/: document.tex
report/data/: data.csv
src/: final1.csv  final1.html  final2.csv  final2.html  matrices.cabal  result_.csv  result_.html  resultw.csv  resultw.html
src/src/: Main.hs  Measures.hs  Winograd.hs  WinogradMatrix.hs
src/src/unuesd/: Winograd.hs  WinogradMatrix.hs
