name:                matrices
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/two#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable matrices
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, array, clock, formatting, deepseq, matrix, vector, parallel, loop, monad-par, criterion, time
  other-modules:       WinogradMatrix
  ghc-options:         -O2
  default-extensions:  BangPatterns ViewPatterns
